# OOP_Laba_03

./: CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: figure.h  figures_array.h  hexagon.h  pentagon.h  point.h  rhomb.h
src/: figure.cpp  figures_array.cpp  hexagon.cpp  pentagon.cpp  rhomb.cpp
tests/: tests.cpp
